syntax = "proto2";
import "types.proto";

// used for serializing/deserializing ApiInfo structs to binary format
package ProtoApiInfo;

message PingData
{
  optional string ip = 1;
  optional int32 pingTime = 2 [default = -2];   // no ping info by default
  optional uint32 iteration = 3;
  optional bool from_disconnected_state = 4;
}

message PingStorage
{
  optional uint32 cur_iteration = 1;
  repeated PingData pings = 2;
}

message BestLocation
{
  optional int32 id = 1 [deprecated=true];     // not use anymore
  optional ProtoTypes.LocationId location_id = 2;
}


message WireGuardConfig
{
  optional string public_key = 1;
  optional string private_key = 2;
  optional string preshared_key = 3;
  optional string allowed_ips = 4;
}